# sales-tracker

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  auth.py  backup.py  cli.py  config.py  countries.py  database.py  logging_config.py  main.py  release_check.py  security.py
app/models/: __init__.py  entities.py
app/routes/: auth.py  dashboard.py  exports.py  health.py  home.py  meetings.py  my_week.py  outreach.py  targets.py
app/services/: __init__.py  activity_metrics.py  dashboard.py  discussion_prompts.py  exports.py  meetings.py  my_week.py  outreach.py  passwords.py  readiness.py  recent_records.py  targets.py
app/templates/: base.html  change_password.html  dashboard.html  home.html  login.html  meeting_form.html  my_week.html  outreach_form.html  recent_meetings.html  recent_outreach.html  targets.html
docs/: Implementation_Plan.docx  MILESTONES.md  implementation-plan.md  release-runbook.md
docs/manual_tests/: authentication_checklist.md  backup_restore_checklist.md  ci_quality_gate_checklist.md  company_dashboard_checklist.md  (+11 more)
migrations/: env.py
tests/: conftest.py  test_auth.py  test_backup.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_comments.py  test_database.py  test_discussion_prompts.py  test_exports.py  test_health.py  test_meeting_company_requirements.py  test_meetings.py  test_models.py  test_my_week.py  test_outreach.py  test_readiness.py  test_recent_records.py  test_release_check.py  test_security.py  test_target_migration.py  test_targets.py
(+16 files in other folders)
